データが失われることを断る